--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
+<html>
+<head>
+<title="home">
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+	<script src="/js/plugins/openWeather.js"></script>
+	<script>
+		$('.weather-temperature').openWeather({
+			city: 'Oslo, Norway'
+		});
+	</script>
+</head>
+<body>
+<div class="weather-temperature"></div>
 "Hello World" 
+</body>
+</html>
