--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 	</div>
 
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 
 	<script type="text/javascript">
 		if (typeof jQuery == 'undefined') {
