--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		}
 	</script>
 
-	<script src="js/plugins/openweather.js"></script>
+	<script src="js/plugins/openWeather.js"></script>
 
 	<script>
 		$(function() {
