--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		$(function() {
 			$('.weather-temperature').openWeather({
 				key: 'c9d49310f8023ee2617a7634de23c2aa',
-				city: 'Los Angeles',
+				city: 'Oslo, Norway',
 				minTemperatureTarget: '.weather-min-temperature',
 				maxTemperatureTarget: '.weather-max-temperature',
 				placeTarget: '.weather-place',
